--- a/templates/base.html
+++ b/templates/base.html
@@ -321,13 +321,80 @@ function scrollFunction() {
         </tr>
     </table>
 
-    <!-- SW MODE -->
-        {% for y, x in gamemodes.items() %}
-            {% if x['games'] != 0 %}
-            <button class='accordion'>{{y}}</button>
-            <div class="panel">
-                <div>
-                    <p>
+        <!-- SW MODE -->
+            {% for y, x in gamemodes.items() %}
+                {% if x['games'] != 0 %}
+                <button class='accordion'>{{y}}</button>
+                <div class="panel">
+                    <div>
+                        <p>
+                            {% if x['kd'] > 100000 %}
+                                {{username}} has an <span class='gold'>infinite</span> K/D
+                                {% if x['wl'] > 100000 %}
+                                    and an <span class='gold'>infinite</span> W/L. Awesome!
+                                {% elif x['wlrelative'][0] > 0 %}
+                                    and a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>). Nice work!
+                                {% elif x['wlrelative'][0] < 0 %}
+                                    but a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>). Nice work!
+                                {% endif %}
+
+                            {% elif x['kdrelative'][0] > 0 %}
+                                {{username}} performs better in {{y}} than overall, with a <b>{{ x['kdrelative'][0]|abs }}</b> higher K/D (<span class='green'>+{{ x['kdrelative'][1] }}%</span>)
+                                {% if x['wl'] > 100000 %}
+                                    and an <span class='gold'>infinite</span> W/L. Nice work!
+                                {% elif x['wlrelative'][0] > 0 %}
+                                    and a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>).
+                                {% elif x['wlrelative'][0] < 0 %}
+                                    but a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>).
+                                {% endif %}
+                                
+                            {% elif x['kdrelative'][0] < 0  %}
+                                {{username}} performs worse in {{y}} than overall, with a <b>{{ x['kdrelative'][0]|abs }}</b> lower K/D (<span class='red'>{{x['kdrelative'][1] }}%</span>)
+                                {% if x['wl'] > 100000 %}
+                                    and an <span class='gold'>infinite</span> W/L. Nice work!
+                                {% elif x['wlrelative'][0] > 0 %}
+                                    but a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>).
+                                {% elif x['wlrelative'][0] < 0 %}
+                                    and a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>).
+                                {% endif %}
+                            {% else %}
+                                {{username}} performs as average in Solo.
+                            {% endif %}
+                        </p>
+                        <p>
+                            <br><b>{{ x['kills'][0] }}</b> kills <b>({{ x['kills'][1]|round(2) }}%)</b>
+                            <br><b>{{ x['deaths'][0] }}</b> deaths <b>({{ x['deaths'][1]|round(2) }}%)</b>
+                            <br><b>{{x['assists'][0]}}</b> assists  <b>({{ x['assists'][1]|round(2) }}%)</b>
+                            {% if x['kd'] > 100000 %}
+                                <br><b>∞</b> K/D
+                            {% else %}
+                                <br><b>{{ x['kd'] }}</b> K/D
+                            {% endif %}
+                            <br><b>{{ x['survived'][0] }}</b> players survived <b>({{ x['survived'][1]|round(2) }}%)</b>
+                            <br><b>{{x['games'][0]}}</b> games played <b>({{ x['games'][1]|round(2) }}%)</b>
+                            <br><b>{{x['wins'][0]}}</b> wins <b>({{ x['wins'][1]|round(2) }}%)</b>
+                            <br><b>{{x['losses'][0]}}</b> losses <b>({{ x['losses'][1]|round(2) }}%)</b>
+                            {% if x['wl'] > 100000 %}
+                                <br><b>∞</b> W/L - <b>∞%</b> win rate
+                            {% else %}
+                                <br><b>{{ x['wl'] }}</b> W/L - <b>{{x['winperc']}}%</b> win rate
+                            {% endif %}
+                            <br><b>{{x['kit']}}</b> currently equipped
+                            <br>Fastest win: <b>{{x['fastestwin']}}</b>
+                            <br>Highest-kill game: <b>{{x['highkill']}}</b> kills
+                        </p>
+                {% endif %}
+                    </div>
+                </div>
+            {% endfor %}
+
+        <!-- SW MODE 2-->
+            {% for y, x in gamemodes2.items() %}
+                {% if x['games'][0] != 0 %}
+                <button class='accordion'>{{y}}</button>
+                <div class="panel">
+                    <div>
+                        <p>
                         {% if x['kd'] > 100000 %}
                             {{username}} has an <span class='gold'>infinite</span> K/D
                             {% if x['wl'] > 100000 %}
@@ -360,115 +427,82 @@ function scrollFunction() {
                         {% else %}
                             {{username}} performs as average in Solo.
                         {% endif %}
-                    </p>
-                    <p>
-                        <br><b>{{ x['kills'][0] }}</b> kills <b>({{ x['kills'][1]|round(2) }}%)</b>
-                        <br><b>{{ x['deaths'][0] }}</b> deaths <b>({{ x['deaths'][1]|round(2) }}%)</b>
-                        <br><b>{{x['assists'][0]}}</b> assists  <b>({{ x['assists'][1]|round(2) }}%)</b>
-                        {% if x['kd'] > 100000 %}
-                            <br><b>∞</b> K/D
-                        {% else %}
-                            <br><b>{{ x['kd'] }}</b> K/D
-                        {% endif %}
-                        <br><b>{{ x['survived'][0] }}</b> players survived <b>({{ x['survived'][1]|round(2) }}%)</b>
-                        <br><b>{{x['games'][0]}}</b> games played <b>({{ x['games'][1]|round(2) }}%)</b>
-                        <br><b>{{x['wins'][0]}}</b> wins <b>({{ x['wins'][1]|round(2) }}%)</b>
-                        <br><b>{{x['losses'][0]}}</b> losses <b>({{ x['losses'][1]|round(2) }}%)</b>
-                        {% if x['wl'] > 100000 %}
-                            <br><b>∞</b> W/L - <b>∞%</b> win rate
-                        {% else %}
-                            <br><b>{{ x['wl'] }}</b> W/L - <b>{{x['winperc']}}%</b> win rate
-                        {% endif %}
-                        <br><b>{{x['kit']}}</b> currently equipped
-                        <br>Fastest win: <b>{{x['fastestwin']}}</b>
-                        <br>Highest-kill game: <b>{{x['highkill']}}</b> kills
-                    </p>
-            {% endif %}
+                        </p>
+                        <p>
+                            <br><b>{{ x['kills'][0] }}</b> kills <b>({{ x['kills'][1]|round(2) }}%)</b>
+                            <br><b>{{ x['deaths'][0] }}</b> deaths <b>({{ x['deaths'][1]|round(2) }}%)</b>
+                            <br><b>{{x['assists'][0]}}</b> assists  <b>({{ x['assists'][1]|round(2) }}%)</b>
+                            {% if x['kd'] > 100000 %}
+                                <br><b>∞</b> K/D
+                            {% else %}
+                                <br><b>{{ x['kd'] }}</b> K/D
+                            {% endif %}
+                            <br><b>{{ x['survived'][0] }}</b> players survived <b>({{ x['survived'][1]|round(2) }}%)</b>
+                            <br><b>{{x['games'][0]}}</b> games played <b>({{ x['games'][1]|round(2) }}%)</b>
+                            <br><b>{{x['wins'][0]}}</b> wins <b>({{ x['wins'][1]|round(2) }}%)</b>
+                            <br><b>{{x['losses'][0]}}</b> losses <b>({{ x['losses'][1]|round(2) }}%)</b>
+                            {% if x['wl'] > 100000 %}
+                                <br><b>∞</b> W/L - <b>∞%</b> win rate
+                            {% else %}
+                                <br><b>{{ x['wl'] }}</b> W/L - <b>{{x['winperc']}}%</b> win rate
+                            {% endif %}
+                        </p>
+                {% endif %}
+                    </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
 
-    <!-- SW MODE 2-->
-        {% for y, x in gamemodes2.items() %}
-            {% if x['games'][0] != 0 %}
-            <button class='accordion'>{{y}}</button>
-            <div class="panel">
-                <div>
-                    <p>
-                    {% if x['kd'] > 100000 %}
-                        {{username}} has an <span class='gold'>infinite</span> K/D
-                        {% if x['wl'] > 100000 %}
-                            and an <span class='gold'>infinite</span> W/L. Awesome!
-                        {% elif x['wlrelative'][0] > 0 %}
-                            and a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>). Nice work!
-                        {% elif x['wlrelative'][0] < 0 %}
-                            but a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>). Nice work!
-                        {% endif %}
+        <script>
+            var acc = document.getElementsByClassName("accordion");
+            var i;
+            
+            for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function() {
+                this.classList.toggle("active");
+                var panel = this.nextElementSibling;
+                if (panel.style.maxHeight) {
+                panel.style.maxHeight = null;
+                } else {
+                panel.style.maxHeight = panel.scrollHeight + "px";
+                } 
+            });
+            }
+        </script>
 
-                    {% elif x['kdrelative'][0] > 0 %}
-                        {{username}} performs better in {{y}} than overall, with a <b>{{ x['kdrelative'][0]|abs }}</b> higher K/D (<span class='green'>+{{ x['kdrelative'][1] }}%</span>)
-                        {% if x['wl'] > 100000 %}
-                            and an <span class='gold'>infinite</span> W/L. Nice work!
-                        {% elif x['wlrelative'][0] > 0 %}
-                            and a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>).
-                        {% elif x['wlrelative'][0] < 0 %}
-                            but a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>).
-                        {% endif %}
-                        
-                    {% elif x['kdrelative'][0] < 0  %}
-                        {{username}} performs worse in {{y}} than overall, with a <b>{{ x['kdrelative'][0]|abs }}</b> lower K/D (<span class='red'>{{x['kdrelative'][1] }}%</span>)
-                        {% if x['wl'] > 100000 %}
-                            and an <span class='gold'>infinite</span> W/L. Nice work!
-                        {% elif x['wlrelative'][0] > 0 %}
-                            but a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>).
-                        {% elif x['wlrelative'][0] < 0 %}
-                            and a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>).
-                        {% endif %}
-                    {% else %}
-                        {{username}} performs as average in Solo.
+        <h2>{{swKTLList}}</h2>
+        <!-- Kills by -->
+        {% if swKillTypeList['success'] == True %}
+            <div class='h3d'>Kills by:</div>
+            <p>
+                {% for killType in swKillTypeList %}
+                    {% if killType != 'success' %}
+                        {{killType}}: {{ swKillTypeList[killType][0] }} ({{swKillTypeList[killType][1] }}%)<br>
                     {% endif %}
-                    </p>
-                    <p>
-                        <br><b>{{ x['kills'][0] }}</b> kills <b>({{ x['kills'][1]|round(2) }}%)</b>
-                        <br><b>{{ x['deaths'][0] }}</b> deaths <b>({{ x['deaths'][1]|round(2) }}%)</b>
-                        <br><b>{{x['assists'][0]}}</b> assists  <b>({{ x['assists'][1]|round(2) }}%)</b>
-                        {% if x['kd'] > 100000 %}
-                            <br><b>∞</b> K/D
-                        {% else %}
-                            <br><b>{{ x['kd'] }}</b> K/D
-                        {% endif %}
-                        <br><b>{{ x['survived'][0] }}</b> players survived <b>({{ x['survived'][1]|round(2) }}%)</b>
-                        <br><b>{{x['games'][0]}}</b> games played <b>({{ x['games'][1]|round(2) }}%)</b>
-                        <br><b>{{x['wins'][0]}}</b> wins <b>({{ x['wins'][1]|round(2) }}%)</b>
-                        <br><b>{{x['losses'][0]}}</b> losses <b>({{ x['losses'][1]|round(2) }}%)</b>
-                        {% if x['wl'] > 100000 %}
-                            <br><b>∞</b> W/L - <b>∞%</b> win rate
-                        {% else %}
-                            <br><b>{{ x['wl'] }}</b> W/L - <b>{{x['winperc']}}%</b> win rate
-                        {% endif %}
-                    </p>
-            {% endif %}
-                </div>
-            </div>
-        {% endfor %}
+                {% endfor %}
+            </p>
+        {% endif %}
 
-
-    <script>
-        var acc = document.getElementsByClassName("accordion");
-        var i;
-        
-        for (i = 0; i < acc.length; i++) {
-          acc[i].addEventListener("click", function() {
-            this.classList.toggle("active");
-            var panel = this.nextElementSibling;
-            if (panel.style.maxHeight) {
-              panel.style.maxHeight = null;
-            } else {
-              panel.style.maxHeight = panel.scrollHeight + "px";
-            } 
-          });
-        }
-    </script>
-
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+        <div class='canvasContainer' style='position:relative;height:25%; width:25%'>
+            <canvas id="myChart"></canvas>
+            <script>
+            var ctx = document.getElementById('myChart');
+            // @ts-ignore
+            var swKTL = {{swKTLList}};
+            var myChart = new Chart(ctx, {
+                type: 'doughnut',
+                responsive: true,
+                maintainAspectRatio:false,
+                data: {
+                    labels: ['Melee', 'Void', 'Bow', 'Mob', 'Fall'],
+                    datasets: [{
+                        label: 'I dunno',
+                        data: swKTL,
+                        borderWidth: 1
+                    }]
+                },
+            });
+            </script>
+        </div>
 </body>
 {% endblock %}
